edit ansible & tf

--- a/ansible/playbook-main.yaml
+++ b/ansible/playbook-main.yaml
@@ -2,9 +2,9 @@
   hosts: 34.128.91.21
   become: true
   roles:
-    # - operation-systems
+    - operation-systems
     - apache
-    # - php
-    # - node
-    # - database
+    - php
+    - node
+    - database
     - laravel
