--- a/ansible/roles/apache/tasks/main.yaml
+++ b/ansible/roles/apache/tasks/main.yaml
@@ -1,82 +1,98 @@
   - name: Download Apache source
     get_url:
-      url: "https://archive.apache.org/dist/httpd/httpd-2.4.56.tar.gz"
-      dest: "/tmp/httpd-2.4.56.tar.gz"
+      url: "{{ apache_url }}"
+      dest: "{{ apache_tar }}"
+      mode: '0644'
 
   - name: Extract Apache source
     unarchive:
-      src: "/tmp/httpd-2.4.56.tar.gz"
-      dest: "/tmp/"
+      src: "{{ apache_tar }}"
+      dest: "/tmp"
       remote_src: yes
+      creates: "{{ apache_src_dir }}"
 
-  - name: Configure Apache
-    command: ./configure --prefix=/usr/local/apache2 --enable-so --enable-ssl --with-mpm=event
+  - name: Configure Apache build
+    command: ./configure --prefix={{ apache_prefix }} --enable-so --enable-ssl --enable-rewrite
     args:
-      chdir: "/tmp/httpd-2.4.56"
+      chdir: "{{ apache_src_dir }}"
 
   - name: Compile Apache
     command: make
     args:
-      chdir: "/tmp/httpd-2.4.56"
+      chdir: "{{ apache_src_dir }}"
 
   - name: Install Apache
     command: make install
     args:
-      chdir: "/tmp/httpd-2.4.56"
+      chdir: "{{ apache_src_dir }}"
 
-  - name: Ensure apachectl is executable
-    file:
-      path: "/usr/local/apache2/bin/apachectl"
-      mode: '0755'
-      state: file
+  - name: Ensure httpd.conf exists
+    stat:
+      path: "{{ apache_prefix }}/conf/httpd.conf"
+    register: conf_stat
 
-  - name: Create systemd service for Apache
+  - name: Backup httpd.conf if exists
     copy:
-      dest: /etc/systemd/system/apache2-custom.service
-      content: |
-        [Unit]
-        Description=Apache HTTPD 2.4.56
-        After=network.target
+      src: "{{ apache_prefix }}/conf/httpd.conf"
+      dest: "{{ apache_prefix }}/conf/httpd.conf.bak"
+      remote_src: yes
+    when: conf_stat.stat.exists
 
-        [Service]
-        Type=forking
-        ExecStart=/usr/local/apache2/bin/apachectl start
-        ExecStop=/usr/local/apache2/bin/apachectl stop
-        ExecReload=/usr/local/apache2/bin/apachectl graceful
-        PIDFile=/usr/local/apache2/logs/httpd.pid
-        RemainAfterExit=yes
-
-        [Install]
-        WantedBy=multi-user.target
-    notify:
-      - Reload systemd
-      - Enable Apache
+  - name: Customize httpd.conf (enable vhost include, server name, etc.)
+    lineinfile:
+      path: "{{ apache_prefix }}/conf/httpd.conf"
+      regexp: '^#?ServerName'
+      line: "ServerName localhost"
+      state: present
 
   - name: Start Apache
-    command: "/usr/local/apache2/bin/apachectl start"
+    command: "{{ apache_prefix }}/bin/apachectl -k start"
 
-  # - name: Add LoadModule proxy_module to httpd.conf
-  #   lineinfile:
-  #     path: /usr/local/apache2/conf/httpd.conf
-  #     line: 'LoadModule proxy_module modules/mod_proxy.so'
-  #     insertafter: EOF
+  - name: Verify Apache is running
+    shell: pgrep httpd
+    register: apache_status
+    changed_when: false
 
-  # - name: Add LoadModule proxy_http_module to httpd.conf
-  #   lineinfile:
-  #     path: /usr/local/apache2/conf/httpd.conf
-  #     line: 'LoadModule proxy_http_module modules/mod_proxy_http.so'
-  #     insertafter: EOF
+  # - name: Ensure Apache bin path is in user bashrc
+  #   shell: |
+  #       export PATH=$PATH:/usr/local/apache2/bin
+  #       source ~/.bashrc
+  #   become_user: bashrc
 
-  - name: edit httpd.conf
-    template:
-      src: httpd.conf.j2
-      dest: /usr/local/apache2/conf/extra/httpd-vhosts.conf 
+  - name: enable loadModule proxy_module
+    replace: 
+      path: /usr/local/apache2/conf/httpd.conf
+      regexp: '#LoadModule rewrite_module modules/mod_rewrite.so'
+      replace: 'LoadModule rewrite_module modules/mod_rewrite.so'
+
+  # - name: edit httpd.conf
+  #   template:
+  #     src: httpd.conf.j2
+  #     dest: /usr/local/apache2/conf/extra/httpd-vhosts.conf 
 
   - name: Enable Apache vhosts include in httpd.conf
     replace:
       path: /usr/local/apache2/conf/httpd.conf
       regexp: '^#Include conf/extra/httpd-vhosts.conf'
       replace: 'Include conf/extra/httpd-vhosts.conf'
+
+  - name: Enable required Apache modules
+    lineinfile:
+      path: /usr/local/apache2/conf/httpd.conf
+      regexp: "^#?LoadModule proxy_module modules/mod_proxy.so"
+      line: "LoadModule proxy_module modules/mod_proxy.so"
+
+  - name: Enable proxy_fcgi_module
+    lineinfile:
+      path: /usr/local/apache2/conf/httpd.conf
+      regexp: "^#?LoadModule proxy_fcgi_module modules/mod_proxy_fcgi.so"
+      line: "LoadModule proxy_fcgi_module modules/mod_proxy_fcgi.so"
+
+  - name: Enable dir_module
+    lineinfile:
+      path: /usr/local/apache2/conf/httpd.conf
+      regexp: "^#?LoadModule dir_module modules/mod_dir.so"
+      line: "LoadModule dir_module modules/mod_dir.so"
     
   - name: Restart custom Apache
     command: /usr/local/apache2/bin/apachectl restart
