--- a/ansible/roles/operation-systems/tasks/main.yaml
+++ b/ansible/roles/operation-systems/tasks/main.yaml
@@ -1,6 +1,6 @@
     - name: "Update OS Debian"
       apt:
-        update_cache: yes
+        update_cache: true
         cache_valid_time: 3600
 
     - name: "Install build dependencies"
